Fixed height on book boxes. Catalog books are now sorted by title

--- a/ClientApp/src/app/changelog/changelog.component.html
+++ b/ClientApp/src/app/changelog/changelog.component.html
@@ -1,5 +1,5 @@
 <div>
     <h1>Changelog</h1>
     <h3>January 2021</h3>
-    <p>Rebuilt landing page to show off app. Added changelog. Home and Catalog cards only show cover image, unless there is no cover. Moved background image to cards. Changed some font colors. </p>
+    <p>Rebuilt landing page to show off app. Added changelog. Home and Catalog cards only show cover image, unless there is no cover. Moved background image to cards. Changed some font colors. Books are now sorted by title.</p>
 </div>
