--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -57,6 +57,7 @@ footer {
   background-size: cover;
   border: 2px solid #c56558;
   width: 100%;
+  height: 97%;
   color: #ffdbcd;
   font-family: 'Alice', serif;
 }
