--- a/ClientApp/src/app/changelog/changelog.component.html
+++ b/ClientApp/src/app/changelog/changelog.component.html
@@ -1,5 +1,11 @@
 <div>
     <h1>Changelog</h1>
     <h3>January 2021</h3>
-    <p>Rebuilt landing page to show off app. Added changelog. Home and Catalog cards only show cover image, unless there is no cover. Moved background image to cards. Changed some font colors. Books are now sorted by title.</p>
+
+    <ul>
+        <li>Rebuilt landing page to show off app</li>
+        <li>Added changelog</li>
+        <li>Home and Catalog cards only show cover image, unless there is no cover</li>
+        <li>Books are now sorted by title</li>
+    </ul>
 </div>
