--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -74,7 +74,7 @@
       </div>
       <button class="btn btn-ok" [disabled]="title.invalid" (click)="getCover(newBook.title)">Choose Book Cover</button>
       <button type="submit" [disabled]="f.invalid" class="btn btn-ok" (click)="save()">Save</button>
-      <button class="btn btn-info" routerLink="/catalog">Nevermind!</button>
+      <button class="btn btn-meh" routerLink="/catalog">Nevermind!</button>
     </form>
 
     <p>{{message}}</p>
