--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -13,10 +13,31 @@ a:hover{
   background-color: #05325c;
   color: #ffdbcd;
 }
-
 .btn-ok:hover{
   background-color: #021b33;
   color: #ffdbcd;
+  border: #f08080 solid 1px;
+}
+
+.btn-bye {
+  background-color: #05325c;
+  color: #ffdbcd;
+}
+
+.btn-bye:hover{
+  background-color: #021b33;
+  color: #ffdbcd;
+  border: #e72c0a solid 1px;
+}
+.btn-meh {
+  background-color: #05325c;
+  color: #ffdbcd;
+}
+
+.btn-meh:hover{
+  background-color: #021b33;
+  color: #ffdbcd;
+  border: #ffdbcd solid 1px;
 }
 
 html, body { height: 100%; }
@@ -24,14 +45,14 @@ html, body { height: 100%; }
 body {
    margin: 0; 
    font-family: 'Lato', "Helvetica Neue", sans-serif; 
-   background-color: #021b33; 
-   /* background-image: url("../src/assets/bookEndsheet.jpg"); */
+   background-color: #26282b; 
+   background-image: url("../src/assets/bookEndsheet.jpg");
    background-size: cover;
    background-attachment: fixed;
    color: #ffdbcd;
   }
 
-h1,h2,h3,h5,h6 {
+h1,h2,h3,h4,h5,h6 {
   color: #f08080;
   font-family: 'Alice', serif;
 }
@@ -52,7 +73,7 @@ footer {
 }
 
 .card {
-  background-color: #05325cce;
+  background-color: #26282b;
   /* background-image: url("../src/assets/bookEndsheet.jpg"); */
   background-size: cover;
   border: 2px solid #c56558;
