--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -72,9 +72,9 @@
           <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
         </div>
       </div>
-      <button class="btn btn-ok" [disabled]="title.invalid" (click)="getCover(newBook.title)">Choose Book Cover</button>
+      <button class="btn btn-meh" [disabled]="title.invalid" (click)="getCover(newBook.title)">Choose Book Cover</button>
       <button type="submit" [disabled]="f.invalid" class="btn btn-ok" (click)="save()">Save</button>
-      <button class="btn btn-meh" routerLink="/catalog">Nevermind!</button>
+      <button class="btn btn-bye" routerLink="/catalog">Nevermind!</button>
     </form>
 
     <p>{{message}}</p>
