Added some blurbs to home. Added link to report issues/feature requests

--- a/ClientApp/src/app/changelog/changelog.component.html
+++ b/ClientApp/src/app/changelog/changelog.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card text-center">
     <h1>Changelog</h1>
     <h3>January 2021</h3>
 
@@ -8,4 +8,8 @@
         <li>Home and Catalog cards only show cover image, unless there is no cover</li>
         <li>Books are now sorted by title</li>
     </ul>
+    <div class="bug">
+        <p>Find a bug? Have a feature suggestion? <a [href]="'https://github.com/AmyTroutman/CapstoneFinal/issues/new'"
+                target="_blank">Let me know!</a></p>
+    </div>
 </div>
