newBook and editBook now match.

--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -9,11 +9,11 @@
       <h6 class="card-subtitle mb-2 ">{{book.author}}</h6>
     </div>
     <div class="col text-right">
-      <h6 class="card-subtitle">Author: <span>{{book.author}}</span></h6>
-      <p class="card-text">Genre: <span>{{book.genre}}</span></p>
-      <p class="card-text">Form: <span>{{book.type}}</span></p>
-      <p class="card-text">Series: <span>{{book.series}}</span></p>
-      <p class="card-text">Status: <span>{{book.status}}</span></p>
+      <p class="card-text"><span>{{book.author}}</span> Author</p>
+      <p class="card-text">Genre<span>{{book.genre}}</span></p>
+      <p class="card-text"><span>{{book.type}}</span>Format</p>
+      <p class="card-text">Series <span>{{book.series}}</span></p>
+      <p class="card-text"><span>{{book.status}}</span></p>
       <hr />
       <p class="card-text text-center">{{book.notes}}</p>
     </div>
