--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="card-deck">
   <div *ngIf="!(isAuthenticated | async)" class="card text-center">
     <h1><i>Bookalog</i></h1>
-    <p>Catalog your books</p>
+    <h3>Catalog your books</h3>
     <p>View your books as a collection...</p>
     <p>or on a searchable table</p>
     <p>Keep notes on each book</p>
