--- a/ClientApp/src/app/edit-book/edit-book.component.css
+++ b/ClientApp/src/app/edit-book/edit-book.component.css
@@ -1,3 +1,20 @@
 * {
     margin: 1%;
 }
+
+span {
+    font-style: italic;
+    color: #f08080;
+}
+
+h3 {
+    color: #b7d9f8;
+}
+
+.card-text {
+    font-size: 1.5em;
+}
+
+img {
+    height: 300px;
+}
