--- a/ClientApp/src/app/new-book/new-book.component.css
+++ b/ClientApp/src/app/new-book/new-book.component.css
@@ -2,15 +2,7 @@
     margin: 1%;
 }
 
-.card-title{
-    font-size: 2em;
-    text-decoration: underline;
-}
-.card-subtitle{
-    font-family: 'Alice', serif;
+.card-text {
     font-size: 1.5em;
 }
-
-
-
 
