--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -79,7 +79,7 @@ footer {
   background-color: #26282b;
   /* background-image: url("../src/assets/bookEndsheet.jpg"); */
   background-size: cover;
-  border: 2px solid #c56558;
+  border: 2px solid #f08080;
   width: 100%;
   height: 97%;
   color: #ffdbcd;
