Began the loan setup. Fixed some colors. Changed buy to get.

--- a/ClientApp/src/app/edit-book/edit-book.component.html
+++ b/ClientApp/src/app/edit-book/edit-book.component.html
@@ -33,6 +33,12 @@
           </select>
         </div>
       </div>
+
+      <div *ngIf="book.status == 'Borrowed'" class="row">
+        <div class="col">
+          <p>hey</p>
+        </div>
+      </div>
       
       <div class="row">
         <div class="col">
