--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -62,6 +62,12 @@
         </div>
       </div>
 
+      <div *ngIf="newBook.status == 'Borrowed'" class="row">
+        <div class="col">
+          <p>hey</p>
+        </div>
+      </div>
+      
       <div class="row">
         <div class="col">
           <label class="card-text" for="notes">Notes</label>
