--- a/ClientApp/src/app/save-modal/save-modal.component.html
+++ b/ClientApp/src/app/save-modal/save-modal.component.html
@@ -1,6 +1,5 @@
-<div class="pop text-center">
-    <h3>Definitely added that book to your catalog!</h3> 
-    <h3>Do you want to add any more books??</h3>
+<div class="text-center">
+    <h4>Do you want to add any more books??</h4>
     <div class="buttons">
       <button type="button" class="btn btn-ok" (click)="yes()">Yes!</button>
       <button type="button" class="btn btn-bye" (click)="close()">Maybe later</button>
