Added and removed some loan things.

--- a/ClientApp/src/app/edit-book/edit-book.component.html
+++ b/ClientApp/src/app/edit-book/edit-book.component.html
@@ -34,11 +34,12 @@
         </div>
       </div>
 
+      <!-- not quite ready for this
       <div *ngIf="book.status == 'Borrowed'" class="row">
         <div class="col">
           <p>hey</p>
         </div>
-      </div>
+      </div> -->
       
       <div class="row">
         <div class="col">
