--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -62,11 +62,12 @@
         </div>
       </div>
 
-      <div *ngIf="newBook.status == 'Borrowed'" class="row">
+      <!-- not quite ready for this -->
+      <!-- <div *ngIf="newBook.status == 'Borrowed'" class="row">
         <div class="col">
           <p>hey</p>
         </div>
-      </div>
+      </div> -->
       
       <div class="row">
         <div class="col">
