--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -3,5 +3,5 @@
   <div role="main" class="container">
     <router-outlet></router-outlet>
   </div>
-  <footer class="footer text-muted"> Designed and built by <a [href]="'https://github.com/AmyTroutman'" target="_blank">Amy Troutman</a> 2020  |  <a [routerLink]="['/changelog']">Changelog</a></footer>
+  <footer class="footer text-muted"> Designed and built by <a [href]="'https://github.com/AmyTroutman'" target="_blank">Amy Troutman</a> 2020 </footer>
 </body>
