--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -108,3 +108,11 @@ footer {
   height: 270px;
   width: 180px;
 }
+
+.screenshot {
+  width: 50%;
+  padding: 0;
+  margin: 3%;
+  border: #f08080 solid 2px;
+  border-radius: 1%;
+}
