Added logged in home screenshot and blurb

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -27,6 +27,13 @@
       </div>
       <img src="\assets\TableScreenshotCrop.png" alt="screenshot of table view" class="col screenshot">
     </div>
+    <div class="row align-items-center">
+      <img src="\assets\HomeListScreenshot.PNG" alt="screenshot of table view" class="col screenshot">
+      <div class="col">
+        <h3>Status Lists</h3>
+        <p>Keep track of the books you're currently reading, what you want to read next, and the books you need to get your hands on</p>
+      </div>
+    </div>
     <h3>Give it a go! <a [routerLink]='["/authentication/register"]'>Create an account!</a></h3>
     <hr>
     <div class="bug">
